feat: 同步 vite 版本源码

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "@quasar/app-webpack/tsconfig-preset",
   "compilerOptions": {
     "jsx": "preserve",
-    "baseUrl": "."
+    "baseUrl": ".",
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "typed-router.d.ts"]
 }
