--- a/package.json
+++ b/package.json
@@ -12,26 +12,30 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
-    "@quasar/extras": "^1.0.0",
+    "@quasar/extras": "^1.15.11",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "pinia": "^2.0.11",
-    "quasar": "^2.6.0",
+    "quasar": "^2.11.8",
     "vue": "^3.0.0",
     "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
-    "@quasar/app-webpack": "^3.0.0",
+    "@quasar/app-webpack": "^3.7.2",
     "@types/node": "^12.20.21",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "@vue/babel-plugin-jsx": "^1.1.1",
+    "autoprefixer": "^10.4.14",
+    "babel-loader": "^9.1.2",
     "dotenv": "^16.0.0",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^8.5.0",
-    "prettier": "^2.5.1"
+    "fast-glob": "^3.2.12",
+    "prettier": "^2.5.1",
+    "unplugin-vue-router": "^0.5.4"
   },
   "browserslist": [
     "last 10 Chrome versions",
